src/objects/Customer_Group_to_Unit_Relationships__c.object
<CustomObject>
    <description>AVB Custom Object - This is a join table to allow many to many relationships between Customer Groups (Accounts) and Units.</description>
    <fields>
        <fullName>AVB_Account_ID__c</fullName>
        <formula>Customer_Group__r.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVB Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be checked on MRI import record if this is a Move In cancellation.</description>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_LBD__c</fullName>
        <description>Current lease begin date</description>
        <label>Current LBD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Group is the record type of the Account object that will be related to Units as customers to units.</description>
        <label>Customer Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Group_to_Unit_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Group_s_Parent_Account__c</fullName>
        <formula>Customer_Group__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Group&apos;s Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Move_Out_Date__c</fullName>
        <description>Populated from MRI on new Move Out.
Clear on Cancel Move Out
Change on Resched Move Out</description>
        <label>Expected Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_End_Date__c</fullName>
        <label>Financial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Exists in FND?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MRI?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date__c</fullName>
        <label>Actual Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Reason__c</fullName>
        <label>Move Out Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTV_Date__c</fullName>
        <description>Notice To Vacate Date. Populated from MRI. 
Populate on new Move Out, clear on cancelled Move Out</description>
        <label>Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PBU__c</fullName>
        <description>This field created to support searching on this Custom Object.  To do this without requiring the user to used Advanced Searching the field needs to be either the Name of the record or an External ID.   This is NOT to be used as an External ID field.  The value will be set with a field update.</description>
        <externalId>true</externalId>
        <label>PBU</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preliminary_Inspection_Date__c</fullName>
        <description>Preliminary Inspection Date prior to move out</description>
        <label>Preliminary Inspection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prior__c</fullName>
        <formula>IF( Financial_End_Date__c &lt; TODAY(), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropPhaseID__c</fullName>
        <label>Property Phase ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Associate__c</fullName>
        <label>Responsible Associate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_Id__c</fullName>
        <description>Concatenation of customer group account number and unique unit ID to provide a unique record ID that can be used during upserting.</description>
        <externalId>true</externalId>
        <label>Unique Record Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipName>Customer_Group_to_Unit_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_s_Parent_Account__c</fullName>
        <formula>Unit__r.Community__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit&apos;s Parent Account</label>
        <type>Text</type>
    </fields>
    <label>Customer Group Units</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Unit__c</columns>
        <columns>Unit_s_Parent_Account__c</columns>
        <columns>Customer_Group__c</columns>
        <columns>Customer_Group_s_Parent_Account__c</columns>
        <columns>Move_In_Date__c</columns>
        <columns>Current_LBD__c</columns>
        <columns>Move_Out_Date__c</columns>
        <columns>Financial_End_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Unit-{000000}</displayFormat>
        <label>Customer Group to Unit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Group Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>